--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,25 +3,36 @@
   "name": "Based Meme Maker",
   "short_name": "Meme Maker",
   "description": "Create, customize and share memes instantly on Base.",
-  "start_url": "/",
+  "start_url": ".",
   "display": "standalone",
-  "background_color": "#0A0E1A",
-  "theme_color": "#0A0E1A",
+  "background_color": "#000000",
+  "theme_color": "#000000",
+  "url": "https://mememinter.vercel.app/",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "/pwa-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/pwa-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/pwa-maskable-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/pwa-maskable-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
-  "developer": {
-    "name": "Hotpunk",
-    "url": "https://basedmeme.vercel.app/"
-  },
-  "webapp": {
-    "url": "https://basedmeme.vercel.app/",
-    "allowed_origins": [
-      "https://basedmeme.vercel.app/"
-    ]
-  }
+  "scope": "/"
 }
